# plbi

./: .envrc  .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  flake.nix  tree.txt
crates/dbconnector/: Cargo.toml
crates/dbconnector/examples/: batch_test.rs
crates/dbconnector/src/destinations/arrow2/: mod.rs
crates/dbconnector/src/destinations/arrowstream/: arrow_assoc.rs  mod.rs
crates/dbconnector/tests/: test_arrow.rs
crates/tldr/: Cargo.toml
crates/tldr/src/: context.rs  error.rs  lib.rs
crates/tldr/src/grammar/: ast.rs  mod.rs  parser.rs
qml/: main.qml
src/: context.rs  error.rs  lib.rs  main.rs  test.rs
src/grammar/: ast.rs  input.lalrpop  parser.rs
tldr/: Cargo.toml  build.rs
tldr/src/: context.rs  lib.rs  main.rs
tldr/src/grammar/: parser.rs
