[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.dependencies]
cxx-qt = "0.6.0"
cxx = "1.0.95"
cxx-qt-lib = "0.6"
nom = "7.1.3"
chrono = "0.4.33"
arrow = "50"
arrow-csv = "50"

dbconnector = { version = "0.3.3", path = "crates/dbconnector", features = [
    "src_csv", 
    "src_sqlite", 
    "src_postgres", 
    "src_oracle", 
    "src_mssql", 
    "dst_arrow",
    ] }

datafusion= { version = "36.0.0", features = ["apache-avro", "avro", "backtrace", "force_hash_collisions", "math_expressions", "num-traits", "serde"]}
