[package]
name = "tldr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tldr"
path = "src/lib.rs"

[[bin]]
name = "tldr"
path = "src/main.rs"


[build-dependencies] 
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { version = "0.6", features = [ "link_qt_object_files" ] }


[dependencies]
cxx-qt = "0.6.0"
cxx = "1.0.95"
cxx-qt-lib = "0.6"
polars = { version = "0.37.0", features = [
    "lazy",    
    "csv",     
    "json",     
    "parquet",     
    "streaming",     
    "dot_diagram",     
    "timezones",     
    "string_pad",     
    "string_to_integer",     
    "cse",     
    "performant",     
    "rows",     
    "pivot",     
    "cross_join",     
    "semi_anti_join",     
    "group_by_list",     
    "row_hash",     
    "diagonal_concat",     
    "dataframe_arithmetic",     
    "fmt",     
    "is_in",     
    "zip_with",     
    "round_series",     
    "repeat_by",     
    "checked_arithmetic",     
    "dot_product",    
    "concat_str",    
    "reinterpret",    
    "take_opt_iter",    
    "mode",    
    "cum_agg",    
    "rolling_window",    
    "interpolate",       
    "list_gather",    
    "rank",    
    "moment",    
    "ewma",    
    "abs",    
    "product",    
    "diff",    
    "pct_change",    
    "unique_counts",    
    "log",    
    "list_to_struct",    
    "list_eval",    
    "cumulative_eval",    
    "arg_where",    
    "search_sorted",    
    "date_offset",    
    "trigonometry",    
    "sign",    
    "propagate_nans",     
    "dtype-categorical",     
    "dtype-struct",     
    "dtype-array",     
    "replace",     
    "rank",     
    "diff",     
    "interpolate",     
    "rolling_window",     
    "mode",     
    "is_last_distinct",     
    "is_first_distinct",     
    "repeat_by",     
    "is_between",     
    "dynamic_group_by",     
    "abs",     
    "round_series",     
    "cum_agg",     
    "strings",     
    "regex",     
    "string_pad",     
    "extract_groups",     
    "temporal"
    ] }
nom = "7.1.3"
chrono = "0.4.33"
connectorx = { version = "0.3.2", features = [
    "src_csv", 
    "src_sqlite", 
#    "src_postgres", 
    "src_oracle", 
#    "src_mssql", 
    "dst_arrow", 
    "dst_arrow2" 
    ] }
