[package]
name = "tldr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tldr"
path = "src/lib.rs"

[[bin]]
name = "tldr"
path = "src/main.rs"


[build-dependencies] 
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { version = "0.6", features = [ "link_qt_object_files" ] }


[dependencies]
cxx-qt = {workspace = true}
cxx = {workspace = true } 
cxx-qt-lib = {workspace = true} 
nom = { workspace = true } 
chrono = {workspace = true} 
datafusion = {workspace = true}
arrow = {workspace = true}
arrow-csv = {workspace = true}
arrow-odbc = {workspace = true}
tokio = {workspace = true}
nom_locate = {workspace = true}
nom-supreme = {workspace = true}
miette = {workspace = true}
thiserror = {workspace = true}
nom-tracable = {workspace = true}



